cabal-version:      2.4
name:               AOC2021
version:            0.1.0.0

synopsis: Advent of Code 2021

license: MIT
author: Blugatroff

executable aoc
    main-is:          Main.hs

    other-modules: 
        Util
        Year2021
        Year2022
        Day
        Year2021.Day1
        Year2021.Day2
        Year2021.Day3
        Year2021.Day4
        Year2021.Day5
        Year2021.Day6
        Year2021.Day7
        Year2021.Day8
        Year2021.Day9
        Year2021.Day10
        Year2021.Day11
        Year2021.Day12
        Year2021.Day13
        Year2021.Day14
        Year2021.Day15
        Year2021.Day16
        Year2021.Day17
        Year2021.Day18
        Year2022.Day1

    build-depends:    
        base ^>=4.14.3.0,
        containers ^>=0.6.5.1,
        array ^>=0.5.4.0,
        mtl ^>=2.2.2,
        heaps ^>=0.4,
        transformers >=0.5,
        either ^>=5.0.2
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        TupleSections,
        LambdaCase
