cabal-version: 1.12

name:           aoc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Blugatroff/adventofcode>
homepage:       https://github.com/Blugatroff/adventofcode#readme
bug-reports:    https://github.com/Blugatroff/adventofcode/issues
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/Blugatroff/adventofcode

executable aoc-exe
  main-is: Main.hs
  other-modules:
      Day
      Dijkstra
      Util
      Year2021
      Year2021.Day1
      Year2021.Day10
      Year2021.Day11
      Year2021.Day12
      Year2021.Day13
      Year2021.Day14
      Year2021.Day15
      Year2021.Day16
      Year2021.Day17
      Year2021.Day18
      Year2021.Day2
      Year2021.Day3
      Year2021.Day4
      Year2021.Day5
      Year2021.Day6
      Year2021.Day7
      Year2021.Day8
      Year2021.Day9
      Year2022
      Year2022.Day1
      Year2022.Day10
      Year2022.Day11
      Year2022.Day12
      Year2022.Day13
      Year2022.Day14
      Year2022.Day15
      Year2022.Day16
      Year2022.Day17
      Year2022.Day18
      Year2022.Day19
      Year2022.Day2
      Year2022.Day20
      Year2022.Day3
      Year2022.Day4
      Year2022.Day5
      Year2022.Day6
      Year2022.Day7
      Year2022.Day8
      Year2022.Day9
      Paths_aoc
  hs-source-dirs:
      src
  default-extensions:
      TupleSections LambdaCase FlexibleContexts MultiParamTypeClasses FlexibleInstances ImportQualifiedPost DeriveGeneric ScopedTypeVariables BangPatterns NamedFieldPuns OverloadedRecordDot DuplicateRecordFields OverloadedStrings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wno-name-shadowing -Wno-unused-matches -O2 -threaded -eventlog
  build-depends:
      array
    , base >=4.7 && <5
    , containers
    , deepseq
    , directory
    , dotenv
    , either
    , heaps
    , http-client
    , http-types
    , loop
    , monad-loops
    , mtl
    , parallel
    , req
    , text
    , transformers
    , vector
  default-language: Haskell2010
